kitsune/sumo/static/sumo/less/main.less
@import 'variables.less';
@import 'grid.less';
@import 'fonts.less';

@import 'ui.less';
@import 'includes/mixins.less';
@import 'includes/kbox.less';

.fonts();

a,
a:link,
a:visited {
  color: @textBlue;
  text-decoration: none;
}

a:hover {
  color: @textDarkBlue;
  text-decoration: underline;
}

a.new {
  // These are links to nonexistant wiki pages.
  color: #d15646;
}

sup sup,
sub sub,
small small {
  bottom: 0;
  font-size: 100%;
  position: relative;
  top: 0;
  vertical-align: baseline;
}

article {
  a:visited {
    color: @textPurple;
  }
}

body {
  color: @textGrey;
  font-family: @OpenSans;
  font-size: 18px;
  line-height: 1.5;
  min-width: 1000px;
  text-align: left;

  &.html-rtl {
    margin: 0;
    padding: 0;
    text-align: right;

    > header .logo {
      float: right;
      padding-right: 30px;
    }

    &.scroll-header {
      > header {
        .logo {
          padding-right: 10px;
        }

        #support-search {
          left: 0;
          padding-left: 10px;
          right: auto;

          .searchbox {
            padding-left: 36px;
          }

          .submit-button {
            left: 18px;
          }
        }

        #aux-nav-left {
          margin-left: 220px;
        }

        #aux-nav-right {
          margin-left: 240px;
        }
      }
    }

    .search-form-large {
      .searchbox {
        padding-left: 60px;
      }
      .submit-button {
        left: 140px;
      }
    }
  }

  > header {
    background: #000;
    height: 100px;
    margin: 0;
    padding: 0;

    #aux-nav-left {
      padding: 29px 0 29px 20px;
    }

    #aux-nav-right {
      padding: 29px 30px 29px 0;
    }

    #support-search {
      display: none;
    }

    .logo {
      background: url('../img/mozilla-support-white.svg') top left no-repeat;
      background-size: 112px 48px;
      display: block;
      float: left;
      margin-left: 30px;

      a {
        display: block;
        height: 48px;
        width: 112px;
      }
    }
  }

  &.scroll-header {
    padding-top: 100px;

    > header {
      background: #000;
      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
      height: 50px;
      position: fixed;
      top: 0;
      width: 100%;
      z-index: 97;

      .logo {
        background-size: 90px 36px;
        height: 36px;
        margin-left: 10px;
        margin-top: 6px;
        width: 90px;

        a {
          display: block;
          height: 36px;
          width: 90px;
        }
      }

      #aux-nav-left,
      #aux-nav-right {
        > ul {
          margin-top: 4px;

          .dropdown {
            display: none;
          }

          .firefox-download-button {
            display: none;
          }

          .volunteer-button {
            display: none;
          }

          > li {
            display: inline-block;

            > a:link,
            a:visited, {
              color: #fff;
            }
          }
        }
      }

      #aux-nav-left {
        padding-bottom: 0;
        padding-top: 0;
      }

      #aux-nav-right {
        margin-right: 240px;
        padding-bottom: 0;
        padding-top: 0;
      }

      #support-search {
        display: block;
        margin-right: 10px;
        margin-top: 10px;
        position: absolute;
        right: 0;
        top: 0;
        z-index: 99;

        .searchbox {
          border: 0;
          box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.5);
        }

        .submit-button {
          top: 6px;
        }
      }

      #tabzilla {
        display: none;
      }
    }
  }

  .html-rtl {
    header {
      .logo {
        float: right;
      }
    }
  }
}

body,
html {
  background: @background;
}

footer {
  background: #000;
  font-size: 16px;
  line-height: 1.3;
  margin: 100px 0 0 0;
  padding: 45px 0 10px 0;
  text-align: left;

  a:link,
  a:visited {
    color: #fff;
    text-decoration: none;
  }

  a:hover,
  a:focus,
  a:active {
    color: #fff;
    text-decoration: underline;
  }

  ul {
    list-style: none;
    margin: 0;
    padding: 0;

    li {
      margin: 0 0 .8em;
    }

    h5 {
      font-family: @OpenSans;
      font-weight: bold;
      margin: 0 0 .9em 0;

      @media screen and (min-width: 1000px) {
        font-size: 18px;
      }
    }
  }

  .footer-logo {
      width: 100px;
  }

  .fineprint {
    color: #fff;
    font-size: 12px;
    line-height: 160%;

    a:link,
    a:visited {
      color: #9b9b9b;
    }
  }

  .language-picker {
    color: #fff;
    font-size: 12px;
    padding-top: 20px;

    a:link,
    a:visited {
      color: #9b9b9b;
      padding-left: 8px;
    }
  }

  .small-links {
    padding-top: 20px;
    font-size: 12px;

    li {
      display: inline;
      padding-right: 20px;

      &:last-child {
        padding-right: 0;
      }
    }
  }

  .social-links {
    margin: 2em 0 0;

    li {
      display: inline-block;
      margin-right: 20px;

      a {
        display: block;
        .image-replaced;
        background-image: url('/static/sumo/img/social-icon-sprite.svg');

        &.twitter {
          background-position: 0 0;
          width: 18px;
          height: 15px;
        }

        &.instagram {
          background-position: 0 -25px;
          width: 19px;
          height: 19px;
        }

        &.youtube {
          background-position: 0 -54px;
          width: 19px;
          height: 13px;
        }

        &.facebook {
          background-position: 0 -77px;
          width: 10px;
          height: 19px;
        }
      }
    }
  }
}

.html-rtl {
  footer {
    text-align: right;
  }
}

h1, h2, h3, h4, h5, h6 {
  font-family: @ZillaSlab;
  font-weight: normal;
}

h1 {
  font-size: 30px;
}

h3 {
  font-size: 20px;
}

ul.errorlist {
  color: red;
  margin: 1em 3em;
}
/* ... */

